--- a/frontEnd/front/src/index.html
+++ b/frontEnd/front/src/index.html
@@ -18,9 +18,20 @@
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/4e95a10d30.js" crossorigin="anonymous"></script>
+
 </head>
 <body>
   <app-root></app-root>
+  <script type="text/javascript">
+    window._mfq = window._mfq || [];
+    (function() {
+      var mf = document.createElement("script");
+      mf.type = "text/javascript"; mf.defer = true;
+      mf.src = "//cdn.mouseflow.com/projects/ac146571-cc94-4886-8ee0-1885b0e543e5.js";
+      document.getElementsByTagName("head")[0].appendChild(mf);
+    })();
+  </script>
 </body>
 
 </html>
